# strategy-forge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SKILL.md  THIRD_PARTY.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: cake-trend-rider.json  fgi-contrarian.json  regime-guard.json  trend-rider.json
docs/: SUBMISSION.md  dorahacks-details.md  dorahacks-full-submission.md  dorahacks-page1.md
docs/superpowers/specs/: 2026-06-14-strategy-forge-design.md
examples/: cake-trend-rider.metrics.json  fgi-contrarian.metrics.json  regime-guard.metrics.json  trend-rider.metrics.json
forge/: __init__.py  env.py  run.py
forge/backtest/: __init__.py  engine.py  pipeline.py  report.py
forge/data/: __init__.py  cmc.py  loader.py  sources.py
forge/strategy/: __init__.py  regime.py  signals.py  spec.py
references/: cmc-endpoints.md  strategy-families.md  strategy-spec-schema.md
scripts/: backtest.py  market_context.py  requirements.txt
tests/: test_cli.py  test_cmc.py  test_engine.py  test_env.py  test_loader.py  test_pipeline.py  test_regime.py  test_report.py  test_run.py  test_signals.py  test_sources.py  test_spec.py
