[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy-forge"
version = "0.1.0"
description = "A CoinMarketCap-powered crypto strategy generation + backtesting Skill (BNB Hack Track 2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ste Tang" }]
dependencies = [
  "vectorbt==1.0.0",
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "hmmlearn>=0.3.2",
  "pydantic>=2.7",
  "requests>=2.32",
  "python-coinmarketcap>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["forge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
